[workspace]

members = [
    "smartpointer",
    "fearlessconcurrency",
    "designpatterns",
    "patternmatching",
    "variables",
    "ownership",
    "compoundtype",
    "traitgeneric",
    "macroadvance",
    "guess",
    "basics",
    "closuring",
    "iteratoring",
    "vectortype",
    "oop",
    "multithread",
    "csp",
    "generics",
    "csp",
    "pow",
    "thread_pool",
    "reflect",
]

